Abstract organizational info
Rather than repeating a bunch of HTML, move it to
include files and collections

--- a/index.html
+++ b/index.html
@@ -3,126 +3,7 @@ title: Home
 layout: default
 ---
 
-<section class="jumbotron mission">
-  <div class="container">
-    <h1 class="jumbotron-heading">
-      Providing a foundation for<br />
-      a basic internal company hub
-    </h1>
-
-    <div class="section-title text-muted">Our Company Hub Mission</div>
-  </div>
-</section>
-
-<section class="jumbotron vision">
-  <div class="container">
-    <h2 class="jumbotron-heading">
-      <!--Even the smallest organizations can be efficient to navigate effectively-->
-      A world where even the smallest organizations are efficient to navigate effectively
-    </h2>
-    <p class="section-title text-muted">Our Vision</p>
-  </div>
-</section>
-
-<div class="core-values cards">
-
-  <div class="section-title">Our Core Values</div>
-
-  <div class="container">
-    <div class="row">
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Simple</h4>
-          <p class="card-text">
-            Keep it easy to setup and navigate the company hub
-          </p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Effective</h4>
-          <p class="card-text">
-            Allow individuals to find the resources they need
-          </p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Intentional</h4>
-          <p class="card-text">
-            Carefully consider the purpose of changes to the hub
-          </p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Collaborative</h4>
-          <p class="card-text">
-            Welcome aligned contributions from collaborators
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</div>
-
-<div class="strategic-goals cards">
-
-  <p class="section-title">Our Strategic Goals</p>
-
-  <div class="container">
-    <div class="row">
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Usage</h4>
-          <p class="card-text">
-            Deploy a hub for at least one organization
-          </p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Contributions</h4>
-          <p class="card-text">
-            Encourage at least one contribution to the hub
-          </p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Feedback</h4>
-          <p class="card-text">
-            Seek feedback from five people to improve usability of the hub
-          </p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <div class="card">
-          <h4 class="card-title">Profit</h4>
-          <p class="card-text">
-            Create a small difference in this world
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</div>
-
-
+{% include organization.html %}
 
 <div class="cards resources personal-resources">
 
