Move personal resources into a collection
Reduce duplication of HTML :)

--- a/index.html
+++ b/index.html
@@ -4,108 +4,7 @@ layout: default
 
 {% include organization.html %}
 
-<div class="cards resources personal-resources">
-
-  <div class="section-title">Personal Resources</div>
-
-  <div class="container">
-
-    <div class="row">
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-usd" style="background-color: #33cc99; "></i>
-          <div class="card-block">
-            <h5 class="card-title">Pay Me, Please</h5>
-            <p class="card-text">
-              Paystubs, Vacation, Time Off
-            </p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-line-chart" style="background-color: #aa5555; "></i>
-          <div class="card-block">
-            <h5 class="card-title">Post-Career Investing</h5>
-            <p class="card-text">
-              401K, Retirement
-            </p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-user-md" style="background-color: #3399ff; "></i>
-          <div class="card-block">
-            <h5 class="card-title">Keep Me Healthy</h5>
-            <p class="card-text">
-              Medical Insurance
-            </p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-smile-o" style="background-color: #3399ff; "></i>
-          <div class="card-block">
-            <h5 class="card-title">Fresh Breath</h5>
-            <p class="card-text">
-              Dental Insurance
-            </p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-eye" style="background-color: #3399ff; "></i>
-          <div class="card-block">
-            <h5 class="card-title">On Sight</h5>
-            <p class="card-text">
-              Vision Insurance
-            </p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-ambulance" style="background-color: #cc7700; "></i>
-          <div class="card-block">
-            <h5 class="card-title">Body scan</h5>
-            <p class="card-text">
-              Body scan and diagnostics
-            </p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-6 col-lg-3">
-        <a href="" class="card">
-          <i class="card-header fa fa-question-circle"></i>
-          <div class="card-block">
-            <h5 class="card-title">HR Contact</h5>
-            <p class="card-text">
-              <dl class="row">
-                <dt class="col-sm-3">Email</dt>
-                <dd class="col-sm-9">hr@example.com</dd>
-                <dt class="col-sm-3">Phone</dt>
-                <dd class="col-sm-9">555-123-4567</dd>
-              </dl>
-            </p>
-          </div>
-        </a>
-      </div>
-
-    </div>
-
-  </div>
-</div>
-
+{% include resource_cards.html class="personal-resources" title="Personal Resources" cards=site.personal_resources %}
 
 
 <div class="cards resources work-resources">
