Update icons for work resources

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 
       <div class="col-sm-6 col-lg-3">
         <a href="" class="card">
-          <i class="card-header fa fa-line-chart" style="background-color: #aa5555; "></i>
+          <i class="card-header fa fa-tasks" style="background-color: #aa5555; "></i>
           <div class="card-block">
             <h5 class="card-title">Prioritizer</h5>
             <p class="card-text">
@@ -41,7 +41,7 @@ layout: default
 
       <div class="col-sm-6 col-lg-3">
         <a href="" class="card">
-          <i class="card-header fa fa-user-md" style="background-color: #3399ff; "></i>
+          <i class="card-header fa fa-book" style="background-color: #3399ff; "></i>
           <div class="card-block">
             <h5 class="card-title">We Love Docs</h5>
             <p class="card-text">
@@ -53,7 +53,7 @@ layout: default
 
       <div class="col-sm-6 col-lg-3">
         <a href="" class="card">
-          <i class="card-header fa fa-ambulance" style="background-color: #cc7700; "></i>
+          <i class="card-header fa fa-handshake-o" style="background-color: #cc7700; "></i>
           <div class="card-block">
             <h5 class="card-title">CRM</h5>
             <p class="card-text">
