--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 
 {% include organization.html %}
 
+{% include resource_cards.html class="upcoming-events" title="Upcoming Events" cards=site.upcoming_events %}
 {% include resource_cards.html class="personal-resources" title="Personal Resources" cards=site.personal_resources %}
 {% include resource_cards.html class="work-resources" title="Work Resources" cards=site.work_resources %}
 
